--- a/articles/ctf-101.md
+++ b/articles/ctf-101.md
@@ -1,4 +1,28 @@
 # CTFのReversing、Pwnに再入門する記録
+## 目標
+[詳解セキュリティコンテスト CTFで学ぶ脆弱性攻略の技術](https://book.mynavi.jp/ec/products/detail/id=122750)のPart 5に載っているすべての攻撃手法を理解し、それらを使った簡単な問題を自力で解けるようになること。
+- スタックベースエクスプロイト
+    - 局所変数の改竄
+    - Return-Oriented Programming
+    - Stack Pivot
+- 共有ライブラリと関数呼び出し
+    - GOT Overwrite
+    - Return to PLT
+    - Return to libc
+- ヒープベースエクスプロイト
+    - ヒープ・libcのアドレスの取得
+    - tcacheエントリの重複
+    - tcacheエントリの汚染
+    - mp_.tcache_binsの改竄
+    - fastbinチャンクの重複
+    - fastbinの汚染
+    - global_max_fastの改竄
+    - smallbinの汚染
+    - largebinの汚染
+    - sizeの改竄
+- 仕様に起因する脆弱性
+    - 制御を奪う
+    - 書式文字列攻撃
 ## 環境構築
 ### ghidraのインストール
 [https://github.com/NationalSecurityAgency/ghidra](https://github.com/NationalSecurityAgency/ghidra)
@@ -13,4 +37,8 @@ echo "source ~/peda/peda.py" >> ~/.gdbinit
 ```
 git clone https://github.com/scwuaptx/Pwngdb.git
 tail -n +3 ~/Pwngdb/.gdbinit >> ~/.gdbinit
+```
+### pwntoolsのインストール
+```
+pip3 install pwntools
 ```
