--- a/articles/ctf-101.md
+++ b/articles/ctf-101.md
@@ -1,4 +1,4 @@
-# CTFのReversing、Pwnに再入門する記録
+# CTFのPwnに再入門する記録
 ## 目標
 [詳解セキュリティコンテスト CTFで学ぶ脆弱性攻略の技術](https://book.mynavi.jp/ec/products/detail/id=122750)のPart 5に載っているすべての攻撃手法を理解し、それらを使った簡単な問題を自力で解けるようになること。
 - スタックベースエクスプロイト
