--- a/articles/ctf-101.md
+++ b/articles/ctf-101.md
@@ -1,6 +1,6 @@
 # CTFのPwnに再入門する記録
 ## 目標
-[詳解セキュリティコンテスト CTFで学ぶ脆弱性攻略の技術](https://book.mynavi.jp/ec/products/detail/id=122750)のPart 5に載っているすべての攻撃手法を理解し、それらを使った簡単な問題を自力で解けるようになること。
+[詳解セキュリティコンテスト CTFで学ぶ脆弱性攻略の技術](https://book.mynavi.jp/ec/products/detail/id=122750)のPart 5に載っているすべての攻撃手法を理解し、それらを使った簡単な問題を自力で解けるようになること。つまり、以下の攻撃手法をすべて自分で使えるようになること。
 - スタックベースエクスプロイト
     - 局所変数の改竄
     - Return-Oriented Programming
